# fantasyfootballai

./: .gitignore  CLAUDE.md  DRAFT_APP_README.md  app.py  collect_stats.py  database.py  database_schema.sql  draft_app.py  draft_values.csv  football_stats.db  main.py  pfr_scraper.py  player_card.html  player_card.py  populate_analysis.py  pyproject.toml
templates/: base.html  error.html  index.html  loading.html  player_card.html
